add 2 line, lyrics change

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,10 @@
         
     <!-- form 제출 시 ajax -->
     <h3 class = "welcome-header">가사로 곡명을 유추하세요.</h3>
-    <h3 class = "welcome-header">가사 힌트를 보여드립니다.</h3>
-
-    <div id = "hint"></div>
+    <h3 class = "welcome-header">아래 가사 힌트를 보여드립니다.</h3>
+    <div class = "mid_wrapper">
+      <span>* </span><div id = "hint"></div><span> *</span>
+    </div>
 
   </body>
 
